{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 59,
  "lineage": "0185596d-5991-8361-697c-5cf5b5000ba6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472ba40eb589f49",
            "arn": "arn:aws:ec2:us-east-1:564693010124:instance/i-0778abae6816f2924",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0778abae6816f2924",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Jenkins_subhani",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f935e2891d5861f2",
            "private_dns": "ip-172-31-88-171.ec2.internal",
            "private_ip": "172.31.88.171",
            "public_dns": "ec2-184-72-82-251.compute-1.amazonaws.com",
            "public_ip": "184.72.82.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:564693010124:key/d1a6620c-d392-49df-a29a-7906d6be21eb",
                "throughput": 0,
                "volume_id": "vol-067bd156e3e8e3a34",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003195ab27750ad17",
            "tags": {
              "Name": "Modules.Include"
            },
            "tags_all": {
              "Name": "Modules.Include"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03df76e5b8143806c"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my-test-lb11",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:564693010124:loadbalancer/app/my-test-lb11/234f7f0e12d2fffb",
            "arn_suffix": "app/my-test-lb11/234f7f0e12d2fffb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-test-lb11-1091251090.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:564693010124:loadbalancer/app/my-test-lb11/234f7f0e12d2fffb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-test-lb11",
            "security_groups": [
              "sg-03df76e5b8143806c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-003195ab27750ad17"
              },
              {
                "subnet_id": "subnet-0862b20f2129dd390"
              }
            ],
            "subnets": [
              "subnet-003195ab27750ad17",
              "subnet-0862b20f2129dd390"
            ],
            "vpc_id": "vpc-091c4487f8582f190",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my-alb-tg11",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:564693010124:targetgroup/my-alb-tg11/83437162d1360a34",
            "arn_suffix": "targetgroup/my-alb-tg11/83437162d1360a34",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:564693010124:targetgroup/my-alb-tg11/83437162d1360a34",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "my-alb-tg11",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-091c4487f8582f190"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "my-tg-attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:564693010124:targetgroup/MyTargetgrp/f8426fec7445e957-20220323140005061900000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:564693010124:targetgroup/MyTargetgrp/f8426fec7445e957",
            "target_id": "i-007a82137567b6242"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564693010124:security-group/sg-0cd20ea1015e10a85",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0cd20ea1015e10a85",
            "ingress": [],
            "name": "my-alb-sg11",
            "name_prefix": "",
            "owner_id": "564693010124",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-091c4487f8582f190"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-996489339",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-085806b24db8d4c66",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}